# src/resources/user/user.controller.js
@@ -27,12 +27,7 @@ const { getBearerTokenFromRequest } = require('../../utils/security/http');
 // #desc:   Register a user
 // #access: Public
 const registerUser = catchErrors(async (req, res) => {
-  const {
-    username: reqUsername,
-    password: reqPassword,
-    email: reqEmail,
-    repeatPassword: reqRepeatPassword
-  } = req.body;
+  const { username: reqUsername, password: reqPassword, email: reqEmail } = req.body;
 
   if (
     (!reqUsername || !reqPassword || !reqEmail) &&
@@ -41,9 +36,6 @@ const registerUser = catchErrors(async (req, res) => {
   ) {
     throw new BadRequest('Please fill all fields correctly.');
   }
-
-  if (reqPassword !== reqRepeatPassword)
-    throw new BadRequest('Repeat password does not match the password');
 
   // Password validation ???
   // if (!reqPassword.match(/^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{6,}$/)) {
@@ -237,7 +229,8 @@ const changePassword = catchErrors(async (req, res) => {
 // #access: Public
 const logout = catchErrors(async (req, res) => {
   const accessToken = getBearerTokenFromRequest(req);
-  if (isValidToken(accessToken)) {
+  console.log(isValidToken(accessToken));
+  if (!isValidToken(accessToken)) {
     throw new Unauthorized('Unauthorized');
   }
 
